--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -291,8 +291,8 @@
     <string name="last_modified">last modified</string>
     <string name="help">help</string>
     <string name="menu_import">import</string>
-    <string name="backup_device">BACKUP IDENTITY TO DEVICE STORAGE</string>
-    <string name="backup_drive">BACKUP IDENTITY TO GOOGLE DRIVE</string>
+    <string name="backup_device">DEVICE STORAGE IDENTITY BACKUP</string>
+    <string name="backup_drive">GOOGLE DRIVE IDENTITY BACKUP</string>
     <string name="let_me_select">let me select</string>
     <string name="could_not_import_identity_drive_404">Could not load identity - please make sure you selected the same Google account that you were using in Google Drive.</string>
     <string name="pick_same_drive_account">Please pick the same account that you were using in Google Drive:</string>
