--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -332,4 +332,6 @@
     <string name="voice_help_4">New voice messages will play automatically for the open chat tab.</string>
     <string name="close">close</string>
     <string name="no_audio_detected">no audio detected - not sending voice message</string>
+    <string name="pref_title_background_image_select">select a background image</string>
+    <string name="pref_title_background_image_remove">remove background image</string>    
 </resources>
