--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -333,5 +333,6 @@
     <string name="close">close</string>
     <string name="no_audio_detected">no audio detected - not sending voice message</string>
     <string name="pref_title_background_image_select">select a background image</string>
-    <string name="pref_title_background_image_remove">remove background image</string>    
+    <string name="pref_title_background_image_remove">remove background image</string>
+    <string name="error_surespot_could_not_create_http_clients">surespot could not create http clients..is storage space available? Shutting down.</string>    
 </resources>
