--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -334,5 +334,6 @@
     <string name="no_audio_detected">no audio detected - not sending voice message</string>
     <string name="pref_title_background_image_select">select a background image</string>
     <string name="pref_title_background_image_remove">remove background image</string>
-    <string name="error_surespot_could_not_create_http_clients">surespot could not create http clients..is storage space available? Shutting down.</string>    
+    <string name="error_surespot_could_not_create_http_clients">surespot could not create http clients..is storage space available? Shutting down.</string>
+    <string name="menu_copy">copy</string>    
 </resources>
