--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -335,6 +335,6 @@
     <string name="menu_copy">copy</string>
     <string name="message_hint">enter message</string>
     <string name="invite_hint">invite user</string>
-    <string name="whats_new_43_message">New Features!\n\nSet background image (via settings->options).\n\nCopy message text (via long press on message).\n\nMultiple device support (use the same identity across multiple devices).\n\nThank you for your continued support! Have you experienced the convenience of voice messaging yet?</string>
-    <string name="whats_new_43_title">Version 43 - The Place To Be</string>      
+    <string name="whats_new_44_message">New Features!\n\nSet background image (via settings->options).\n\nCopy message text (via long press on message).\n\nMultiple device support (use the same identity across multiple devices).\n\nThank you for your continued support! Have you experienced the convenience of voice messaging yet?</string>
+    <string name="whats_new_44_title">Version 44</string>      
 </resources>
