--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,8 +44,7 @@
     <string name="settings">settings</string>
     <string name="welcome_to_surespot"><![CDATA["Welcome to surespot! Data sent using this app is <a href="https://en.wikipedia.org/wiki/End-to-end_encryption">end-to-end</a> encrypted with <a href="https://en.wikipedia.org/wiki/Symmetric-key_algorithm">symmetric-key</a> encryption (<a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">256 bit AES-GCM</a>) using keys created with 521 bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_Diffie-Hellman">ECDH shared secret derivation</a>."]]></string>
     <string name="no_friends">"No friends...yet. Invite surespot users by entering their username below."</string>
-    <string name="help_invite">"Invite surespot users by entering their username on the home tab."</string>
-    <string name="invite_contacts">"Use the 'invite contacts' menu option to invite users via QR code, email, text message, or other applications."</string>
+    <string name="help_invite">"Invite surespot users by entering their username on the home tab."</string>    
     <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
     <string name="help_holdmessage">Hold on a message for message options.</string>
     <string name="help_holdfriend">Hold on a friend for friend options.</string>
@@ -93,8 +92,7 @@
     <string name="about_action_bar_right">about</string>
     <string name="identity">identity</string>
     <string name="invite">invite</string>
-    <string name="no_contact_data_selected_or_entered">no contact data selected or entered</string>
-    <string name="toggled_sms_contact_population_mechanism">toggled sms contact population mechanism</string>
+    <string name="no_contact_data_selected_or_entered">no contact data selected or entered</string>    
     <string name="invitation_email_subject">Invitation to chat with me privately via surespot</string>
     <string name="invite_no_application_found">No application found to handle invite.</string>
     <string name="invite_progress_text">creating invitation</string>
@@ -226,16 +224,6 @@
     <string name="delete_identity_message_warning">Deleting an identity will erase all messages that identity has sent. It can not be undone.</string>
     <string name="identity_colon">identity:</string>
     <string name="backup_location_note">Note: this may or may not be the removable SD card depending on your device.</string>
-    <string name="invite_others">Invite others to communicate with you privately via surespot by sharing an auto-invite link with them.</string>
-    <string name="invite_reassurance">Your contact information is not stored, uploaded, or used anywhere other than in this capacity.</string>
-    <string name="invite_via_email">invite via email</string>
-    <string name="invite_via_text_message">invite via text message</string>
-    <string name="invite_via_other_application">invite via other application</string>
-    <string name="click_to_select_email_contacts">"Press the button to select email addresses and launch your email app."</string>
-    <!-- anything in [] for the string below will fire the onclick listener to set the alternate sms delimiter -->
-    <string name="invite_text">"Press the button to select phone numbers and launch your sms app. (Please [touch here] if contacts fail to populate in your sms app)."</string>
-    <string name="touch_invite_button">"Press the button to select application to invite with, eg. facebook, twitter."</string>
-    <string name="phone_number">phone number</string>
     <string name="generate_new_keypairs">Generate new private key pairs for the selected identity and revoke the current pair. Any other devices will no longer be able to access surespot using the selected identity.</string>
     <string name="username">username</string>
     <string name="create_identity">create identity</string>
@@ -250,8 +238,7 @@
     <string name="pref_title_delete_message">delete message</string>
     <string name="pref_title_delete_all_messages">delete all messages</string>
     <string name="pref_title_identity_management">identity management</string>
-    <string name="pref_title_change_password">change password...</string>
-    <string name="pref_title_alternate_sms_invite_to">alternate sms invite \'to\'</string>
+    <string name="pref_title_change_password">change password...</string>    
     <string name="pref_title_silent_error_reporting">silent error reporting</string>
     <string name="pref_title_message_debug_mode">message debug mode</string>
     <string name="pref_title_debug">debug</string>
@@ -261,10 +248,8 @@
     <string name="pref_summary_export_identity">Backup your identity to Device Storage or Google Drive.</string>
     <string name="pref_summary_import_identity">Restore your identity from Device Storage or Google Drive.</string>
     <string name="pref_summary_delete_identity">Deleting an identity can not be undone.</string>
-    <string name="pref_summary_regen_keys">For the paranoid.</string>
-    <string name="pref_summary_alternate_sms_delimiter">Needs to be enabled on some devices to populate the sms \'to\' field correctly when multiple contacts are selected in invite contacts.</string>
-    <string name="pref_summary_message_debug_mode">Shows more information about messages for debugging purposes.</string>
-    <string name="menu_invite_contacts">invite contacts</string>
+    <string name="pref_summary_regen_keys">For the paranoid.</string>    
+    <string name="pref_summary_message_debug_mode">Shows more information about messages for debugging purposes.</string>    
     <string name="pref_title_delete_identity">delete identity...</string>
     <string name="delete_identity">delete identity</string>
     <string name="surespot_help">surespot help</string>
@@ -337,5 +322,7 @@
     <string name="invite_hint">invite user</string>
     <string name="whats_new_44_message">New Features!\n\nSet background image (via settings->options).\n\nCopy message text (via long press on message).\n\nMultiple device support (use the same identity across multiple devices).\n\nThank you for your continued support! Have you experienced the convenience of voice messaging yet?</string>
     <string name="whats_new_44_title">Version 44</string>
-    <string name="recording_cancelled">recording cancelled</string>      
+    <string name="recording_cancelled">recording cancelled</string>
+    <string name="share_invite_link">share invite link</string>
+    <string name="share_link_help">"Use the 'share invite link' menu option to share a link via email, sms, twitter, or other social media, that when clicked will install surespot / invite you as a friend in surespot"</string>      
 </resources>
