--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -319,4 +319,6 @@
     <string name="no_audio_detected">nessun suono rilevato - messaggio vocale non inviato</string>
     <string name="share_invite_link">"condividi link dell'invito"</string>
     <string name="share_link_help">"Usa l'opzione \"condividi link dell'invito\" per condividere un link via email, sms, twitter, o altri social network, che installeranno surespot / ti inviteranno come amico su surespot quando verranno cliccati"</string>
+    <string name="pref_stop_cache_logout_title">uccidere la cache al logout</string>
+    <string name="pref_stop_cache_logout_summary">uccide il servizio di cache al logout</string>
 </resources>
