--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -326,5 +326,9 @@
     <string name="share_invite_link">share invite link</string>
     <string name="share_link_help">"Use the 'share invite link' menu option to share a link via email, sms, twitter, or other social media, that when clicked will install surespot / invite you as a friend in surespot"</string>
     <string name="pref_stop_cache_logout_title">kill cache on logout</string>
-    <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>      
+    <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>
+    <string name="menu_assign_alias">assign alias</string>
+    <string name="could_not_assign_friend_alias">could not assign friend alias</string>
+    <string name="enter_alias">enter alias</string>
+    <string name="enter_alias_for">"enter alias for %s"</string>      
 </resources>
