--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -319,12 +319,12 @@
     <string name="error_surespot_could_not_create_http_clients">surespot could not create http clients..is storage space available? Shutting down.</string>
     <string name="menu_copy">copy</string>
     <string name="message_hint">enter message</string>
-    <string name="invite_hint">invite user</string>
-    <string name="whats_new_44_message">New Features!\n\nSet background image (via settings->options).\n\nCopy message text (via long press on message).\n\nMultiple device support (use the same identity across multiple devices).\n\nThank you for your continued support! Have you experienced the convenience of voice messaging yet?</string>
-    <string name="whats_new_44_title">Version 44</string>
+    <string name="invite_hint">invite user</string>    
     <string name="recording_cancelled">recording cancelled</string>
     <string name="share_invite_link">share invite link</string>
     <string name="share_link_help">"Use the 'share invite link' menu option to share a link via email, sms, twitter, or other social media, that when clicked will install surespot / invite you as a friend in surespot"</string>
     <string name="pref_stop_cache_logout_title">kill cache on logout</string>
-    <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>      
+    <string name="pref_stop_cache_logout_summary">kills the cache service on logout</string>
+    <string name="whats_new_46_message">New Features!\n\nKill cache on logout setting (via settings->options).\n\nRemoved READ_CONTACTS permission.\n\nNetwork optimizations.\n\nThank you for your continued support!</string>
+    <string name="whats_new_46_title">Version 45</string>      
 </resources>
