--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -87,7 +87,7 @@
     <string name="notification_title">surespot</string>
     <string name="notification_message">%1$s: nuovo messaggio da %2$s</string>
     <string name="notification_invite">%1$s: invito da %2$s</string>
-    <string name="notification_invite_accept">%1$s: %2$s ha accettato il tuo invito\"</string>
+    <string name="notification_invite_accept">%1$s: %2$s ha accettato il tuo invito</string>
     <string name="about_version">versione: %s</string>
     <string name="surespot">surespot</string>
     <string name="about_action_bar_right">informazioni su</string>
