--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -26,7 +26,7 @@
     <string name="no_identity_exported">No se ha exportado el perfil</string>
     <string name="no_identity_imported">No se ha restaurado el perfil</string>
     <string name="no_identity_deleted">No se ha eliminado el perfil</string>
-    <string name="identity_imported_successfully">Perfil restaurado correctamente</string>
+    <string name="identity_imported_successfully">Perfil restaurado correctamente %s</string>
     <string name="could_not_import_identity">No se puede restaurar el perfil</string>
     <string name="could_not_restore_identity_name">No se puede restaurar el perfil %s</string>
     <string name="notifications_title">Notificaciones push</string>
