--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -328,9 +328,7 @@
     <string name="whats_new_47_message">New Features!\n\nKill cache on logout setting (via settings->options).\n\nRemoved READ_CONTACTS permission.\n\nNetwork optimizations.\n\nThank you for your continued support!</string>
     <string name="whats_new_47_title">Version 49</string>
     <string name="could_not_load_public_keys">could not load public keys</string>
-    <string name="keystore_not_supported">keystore not supported</string>
-    <string name="pref_title_enable_keystore">enable keystore</string>
-    <string name="pref_summary_enable_keystore">allows saving of passwords in the device keystore</string>
+    <string name="keystore_not_supported">keychain not supported</string>
     <string name="pref_title_global_options">global options</string>
     <string name="store_password_in_keychain">store password in keychain</string>
     
